deploy/apps/mate/service-pdf.yaml
apiVersion: v1
kind: Service
metadata:
  name: mate-pdf
  labels:
    app: mate-pdf
spec:
  type: ClusterIP
  selector:
    app: mate-pdf
  ports:
    - name: http
      port: 80
      targetPort: http
