deploy/apps/mate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mate
  labels:
    app: mate-backend
spec:
  type: ClusterIP
  selector:
    app: mate
  ports:
    - name: http
      port: 80
      targetPort: http
