deploy/apps/mate/ingress-pdf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mate-pdf
  labels:
    app: mate-pdf
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: pdf.kusitms-mate.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mate-pdf
                port:
                  number: 80
